# Yurt_Market_v2

./: .env  .env.example  .gitignore  DEVELOPMENT-GUIDE.md  PROJECT-DOCUMENTATION.md  README.md  SETUP.md  db.sqlite3  manage.py  pyproject.toml
config/: __init__.py  celery.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
core/: __init__.py  views.py
core/events/: __init__.py  base.py  dispatcher.py  types.py
core/exceptions/: __init__.py  domain.py  handlers.py
core/repository/: __init__.py  base.py
core/utils/: __init__.py  logging.py
core/validators/: __init__.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
modules/: __init__.py
modules/admin/: apps.py  urls.py  views.py
modules/analytics/: __init__.py  admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
modules/dorms/: __init__.py  admin.py  apps.py  models.py  repositories.py  serializers.py  urls.py  views.py
modules/notifications/: __init__.py  apps.py  services.py  urls.py  views.py
modules/orders/: __init__.py  admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
modules/payments/: __init__.py  adapters.py  apps.py  services.py  urls.py  views.py
modules/products/: __init__.py  admin.py  apps.py  handlers.py  (+6 more)
scripts/: __init__.py  create_superuser.py  seed_data.py
tests/: __init__.py  test_payments.py  test_smoke.py
yurt_market.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+70 files in other folders)
